--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "nodemon": "^3.0.3",
     "socket.io": "^4.7.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1"
+  },
   "description": ""
 }
